@@ -1,3 +1,8 @@
+Wed Sep 13 18:12:43 BST 2006  Olly Betts <olly@survex.com>
+
+	* backends/flint/flint_io.cc,backends/flint/flint_io.h,
+	  backends/flint/flint_version.cc: Fix compiler warnings.
+
 Wed Sep 13 06:09:40 BST 2006  Olly Betts <olly@survex.com>
 
 	* backends/flint/flint_version.cc,backends/flint/flint_version.h:
